--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,26 @@
 .Rhistory
 MOB_paper.log
-MOB_paper-[001-999].pdf
 MOB_paper-concordance.tex
 MOB_paper-synctext.gz
 28023-0001-Data.tsv
 28023-0001-Documentation-readme.txt
+MOB_paper-001.pdf
+MOB_paper-002.pdf
+MOB_paper-003.pdf
+MOB_paper-004.pdf
+MOB_paper-005.pdf
+MOB_paper-006.pdf
+MOB_paper-007.pdf
+MOB_paper-008.pdf
+MOB_paper-009.pdf
+MOB_paper-010.pdf
+MOB_paper-011.pdf
+MOB_paper-012.pdf
+MOB_paper-013.pdf
+MOB_paper-014.pdf
+MOB_paper-015.pdf
+MOB_paper-016.pdf
+MOB_paper-017.pdf
+MOB_paper-018.pdf
+MOB_paper-019.pdf
+MOB_paper-020.pdf
