--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ MOB_paper-019.pdf
 MOB_paper-020.pdf
 
 ## intermediate files produced by LaTeX
+*.tex
 *.aux
 *.log
 *.out
@@ -34,6 +35,6 @@ MOB_paper-020.pdf
 *.blg
 
 ## pdfs for text and figures because they can be reproduced from code
-.pdf
+*.pdf
 
 
